--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   ],
   "author": "zhangyuxuan",
   "license": "MIT",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "@types/jest": "^27.0.3",
+    "@types/node": "^16.11.10",
     "eslint": "^8.3.0",
     "eslint-plugin-jest": "^25.3.0",
     "jest": "^27.3.1",
@@ -22,8 +25,5 @@
     "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
-  },
-  "devDependencies": {
-    "@types/node": "^16.11.10"
   }
 }
