--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "tsc",
-    "example": "npx ts-node examples/example.ts",
+    "example": "tsc && npx ts-node examples/example.ts",
     "test": "jest"
   },
   "keywords": [
@@ -18,7 +18,7 @@
   "dependencies": {},
   "devDependencies": {
     "@types/jest": "^27.0.3",
-    "@types/node": "^16.11.10",
+    "@types/node": "^16.11.11",
     "eslint": "^8.3.0",
     "eslint-plugin-jest": "^25.3.0",
     "jest": "^27.3.1",
