--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc",
     "example": "tsc && npx ts-node examples/example.ts",
+    "demo": "webpack-dev-server --config webpack.config.js",
     "test": "jest"
   },
   "keywords": [
@@ -17,15 +18,22 @@
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
+    "@antv/g6": "^4.5.0",
+    "@types/events": "^3.0.0",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.11",
     "eslint": "^8.3.0",
     "eslint-plugin-jest": "^25.3.0",
+    "events": "^3.3.0",
+    "html-webpack-plugin": "^5.5.0",
     "jest": "^27.3.1",
     "jest-cli": "^27.3.1",
     "ts-jest": "^27.0.7",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "webpack": "^5.64.4",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.6.0"
   }
 }
