--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "graph",
     "dag"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Eden-cola/task-graph.git"
+  },
   "author": "zhangyuxuan",
   "license": "MIT",
   "dependencies": {},
